@@ -7,7 +7,11 @@ import shared.model.*;
 
 import java.beans.PropertyChangeSupport;
 import java.beans.PropertyChangeListener;
+import java.time.LocalDate;
+import java.util.Arrays;
 import java.util.List;
+import java.util.concurrent.CompletableFuture;
+import java.util.concurrent.TimeUnit;
 
 public class PartyClientModel implements PartyModel
 {
@@ -55,7 +59,22 @@ public class PartyClientModel implements PartyModel
 
   @Override public List<Party> getParties(User user)
   {
-    return List.of();
+    if (user == null) return List.of();
+    CompletableFuture<List<Party>> future = new CompletableFuture<>();
+    PropertyChangeListener listener = evt -> {
+      JsonObject json = (JsonObject) evt.getNewValue();
+      Party[] parties = gson.fromJson(json.get("data").getAsString(), Party[].class);
+      future.complete(Arrays.asList(parties));
+    };
+    support.addPropertyChangeListener("getAll", listener);
+    client.requestGetParties(user.getId());
+    try {
+      return future.get(5, TimeUnit.SECONDS);
+    } catch (Exception e) {
+      return List.of();
+    } finally {
+      support.removePropertyChangeListener("getAll", listener);
+    }
   }
 
   @Override public Party getParty(int id)
@@ -162,12 +181,23 @@ public class PartyClientModel implements PartyModel
   }
 
   @Override public Party createParty(String name, String description,
-      String location, String organizerId)
+      String location, String organizerId, LocalDate date)
   {
-    client.requestCreateParty(name, description, location, organizerId);
-    String response = client.receive();
-    JsonObject json = JsonParser.parseString(response).getAsJsonObject();
-    return gson.fromJson(json.get("data"), Party.class);
+    CompletableFuture<Party> future = new CompletableFuture<>();
+    PropertyChangeListener listener = evt -> {
+      JsonObject json = (JsonObject) evt.getNewValue();
+      Party party = gson.fromJson(json.get("data").getAsString(), Party.class);
+      future.complete(party);
+    };
+    support.addPropertyChangeListener("createParty", listener);
+    client.requestCreateParty(name, description, location, organizerId, date);
+    try {
+      return future.get(5, TimeUnit.SECONDS);
+    } catch (Exception e) {
+      return null;
+    } finally {
+      support.removePropertyChangeListener("createParty", listener);
+    }
   }
 
   @Override public void updateParty(Party party, String name,
